--- a/sass/base/_query.scss
+++ b/sass/base/_query.scss
@@ -15,18 +15,29 @@
 }
 
 /* ===home: MediaQuery seccion about=== */
+@media screen and (max-width: 768px) {
+  .about__secciones {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .about__titulo {
+    font-size: 3rem;
+  }
+
+  .about__subtitulo {
+    padding-bottom: 0.6rem;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .about__secciones {
+    flex-wrap: wrap;
     justify-content: center;
   }
 
   .about__titulo {
-    font-size: 2rem;
-  }
-
-  .about__secciones {
-    width: 45rem;
-    height: 83.7rem;
+    font-size: 2.5rem;
   }
 
   .about__seller--separador {
@@ -49,13 +60,6 @@
 }
 
 @media screen and (max-width: 963px) {
-  .contenedor {
-    width: 95%;
-    max-width: 80rem;
-    overflow: hidden;
-    margin: 0 auto;
-  }
-
   .portafolio {
     padding-top: 5rem;
     padding-bottom: 1rem;
@@ -70,7 +74,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+
     grid-template-areas:
       "nota nota nota"
       "nota nota nota"
@@ -84,8 +88,9 @@
   .portafolio__informacion {
     height: 50rem;
     gap: 2rem;
-    width: 84%;
+    width: 90%;
     margin: 0 auto;
+    margin-bottom: 1.4rem;
   }
 
   .portafolio__picture {
@@ -133,14 +138,93 @@
   }
 }
 
+@media screen and (max-width: 699px) {
+  .portafolio__grid {
+    margin-top: 15px;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-areas:
+      "nota nota nota"
+      "nota nota nota"
+      "member1 member2 member3"
+      "member4 member5 member6"
+      "member7 member8 member9";
+    gap: 1rem;
+    place-items: center;
+  }
+
+  .portafolio__informacion {
+    gap: 2rem;
+    margin: 0 auto;
+  }
+
+  .portafolio__picture {
+    width: 17rem;
+    height: 16rem;
+  }
+}
+
+@media screen and (max-width: 557px) {
+  .portafolio__grid {
+    margin-top: 15px;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+      "nota nota "
+      "nota nota "
+      "member1 member2"
+      "member3 member4"
+      "member5 member6"
+      "member7 member8"
+      "member9 .";
+    gap: 1rem;
+    place-items: center;
+  }
+
+  .portafolio__picture {
+    width: 22rem;
+    height: 18rem;
+  }
+}
+
+@media screen and (max-width: 475px) {
+  .portafolio__picture {
+    width: 19rem;
+    height: 17rem;
+  }
+
+  .portafolio__paragrafo {
+    font-size: 1.4rem;
+  }
+}
+
+@media screen and (max-width: 413px) {
+  .portafolio__picture {
+    width: 16rem;
+    height: 12rem;
+  }
+
+  .portafolio__paragrafo {
+    font-size: 1.2rem;
+  }
+}
+
 /* ===home: MediaQuery seccion layout=== */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 774px) {
+  .layouts__control {
+    margin-top: 22px;
+  }
+
   .layouts__title {
     font-size: 2rem;
   }
 
   .layouts__img3 {
-    margin: 3rem;
+    margin: 2rem;
   }
 
   .layouts__paragrafo {
@@ -168,7 +252,7 @@
   .layouts__img3 {
     margin: 5rem;
     margin-bottom: 2rem;
-    width: 70%;
+    width: 60%;
     background-size: cover;
     box-shadow: $box-shadow-principal;
   }
@@ -186,7 +270,7 @@
 }
 
 /* ===home: MediaQuery seccion opinion=== */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 774px) {
   .opinion {
     padding: 3rem;
     background: #fefdff;
@@ -196,7 +280,6 @@
 @media screen and (max-width: 500px) {
   .opinion {
     padding: 3rem 0;
-    background: $color-secundario;
   }
 
   .opinion__mensaje {
@@ -215,7 +298,7 @@
     display: grid;
     gap: 2rem;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-template-areas:
       "notiCero notiCero notiCero notiCero"
       "notiCero notiCero notiCero notiCero"
@@ -252,6 +335,64 @@
   }
 }
 
+@media screen and (max-width: 600px) {
+  .noticias__grid {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas:
+      "notiCero notiCero notiCero notiCero"
+      "notiCero notiCero notiCero notiCero"
+      "notiCero notiCero notiCero notiCero"
+      "notiUno notiUno notiUno notiUno"
+      "notiDos notiDos notiDos notiDos"
+      "notiTres notiTres notiTres notiTres";
+  }
+
+  .noticias__imagenUno {
+    background-image: url("../img/warzoneNoti.jpg");
+    width: 100vw;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .noticias__imagenDos {
+    background-image: url("../img/grandNoti.jpg");
+    width: 100vw;
+    height: 15vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .noticias__imagenTres {
+    background-image: url("../img/witcherNoti.jpg");
+    width: 100vw;
+    height: 15vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .noticias__grid {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+      "notiCero notiCero notiCero notiCero"
+      "notiCero notiCero notiCero notiCero"
+      "notiCero notiCero notiCero notiCero"
+      "notiUno notiUno notiUno notiUno"
+      "notiDos notiDos notiDos notiDos"
+      "notiTres notiTres notiTres notiTres";
+  }
+}
 /* ------------------------------------------ */
 /* -------query de la pagina producto------- */
 /* ---------------------------------------- */
