--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -26,6 +26,8 @@ body {
     font-size: 1.8rem;
     padding-bottom: 0.8rem;
     color: $color-terciario;
+    padding: 0 1rem;
+    padding-bottom: 0.6rem;
   }
 
   &__text {
@@ -33,6 +35,7 @@ body {
     color: $color-terciario;
     text-align: justify;
     font-size: 1.3rem;
+    padding: 0 1rem;
   }
 
   &__img1 {
