--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -94,6 +94,17 @@
 }
 
 @media (max-width: 962px) {
+  .nav {
+    position: fixed;
+    width: 100%;
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    background: linear-gradient(to right, #4568dc, #dbced8);
+  }
+
   .nav__label {
     display: block;
     cursor: pointer;
@@ -101,9 +112,9 @@
 
   .nav__menu {
     position: fixed;
-    top: 80px;
+    top: 70px;
     bottom: 0;
-    background: $color-menu-responsive;
+    background: linear-gradient(to right, #f0f2f0, #363b53);
     width: 100%;
     left: 0;
     display: flex;
@@ -116,15 +127,6 @@
 
   .nav__input:checked + .nav__menu {
     clip-path: circle(100% at center);
-  }
-
-  .nav__link--media::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 3px;
-    padding: 2px;
-    background: $color-blanco;
   }
 
   .headline__wave {
