--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -93,16 +93,28 @@
   }
 }
 
+@media screen and (max-width: 1099px) {
+  .hero__titulo {
+    font-size: 5rem;
+  }
+}
+
 @media screen and (max-width: 962px) {
   .hero__main {
     padding-top: 69px;
   }
 }
 
-@media screen and (max-width: 636px) {
+@media screen and (max-width: 868px) {
+  .hero__titulo {
+    font-size: 4rem;
+  }
+}
+
+@media screen and (max-width: 695px) {
   .hero {
     .hero__titulo {
-      font-size: 4rem;
+      font-size: 3rem;
     }
 
     .hero__main {
@@ -111,6 +123,10 @@
 
     .hero__img {
       max-width: 100%;
+    }
+
+    .hero__paragrafo {
+      font-size: 1.4rem;
     }
   }
 }
