--- a/sass/pages/_producto.scss
+++ b/sass/pages/_producto.scss
@@ -1,8 +1,8 @@
 .product {
   &__grid {
     padding: 2px 5px;
-    width: 100%;
-    height: 2000px;
+    /* width: 100%; */
+    /* height: 2000px; */
     display: grid;
     gap: 30px;
     grid-template-columns: repeat(3, 1fr);
