aplicacion de bootstrap

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,7 +17,7 @@
 @import "pages/home";
 @import "pages/producto";
 @import "pages/servicios";
-
+@import "pages/loguin";
 @import "base/query";
 
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Fredoka+One&family=Gothic+A1:wght@200;300;400;500;600;700;800&family=Poppins:wght@300;400;500;600;700;800&display=swap");
