--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1173,6 +1173,36 @@ body {
   .seccion3 .seccion3-grid2 {
     grid-area: seccion3-grid2; }
 
+.body-control {
+  background: #dbe0e9; }
+
+.sesion-control {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.login {
+  width: 360px;
+  height: min-content;
+  padding: 20px;
+  border-radius: 12px;
+  background: #ffffff; }
+
+.login h1 {
+  font-size: 2.5rem;
+  margin-bottom: 25px; }
+
+.login form {
+  font-size: 20px; }
+
+.login form .form-group {
+  margin-bottom: 12px; }
+
+.login form input[type="submit"] {
+  font-size: 20px;
+  margin-top: 15px; }
+
 /* ------------------------------------------ */
 /* -------query de la pagina inicio--------- */
 /* ---------------------------------------- */
