--- a/CSS/style.css
+++ b/CSS/style.css
@@ -654,6 +654,7 @@ body {
 
 @media (max-width: 962px) {
   .nav {
+    z-index: 1;
     position: fixed;
     width: 100%;
     display: block;
@@ -668,7 +669,7 @@ body {
   .nav__menu {
     position: fixed;
     top: 70px;
-    bottom: 0;
+    bottom: 0px;
     background: linear-gradient(to right, #f0f2f0, #363b53);
     width: 100%;
     left: 0;
@@ -869,21 +870,21 @@ body {
     box-shadow: 0px 10px 13px -7px #000000, -1px 4px 16px 2px rgba(0, 0, 0, 0); }
   .noticias__imagenUno {
     background-image: url("../img/warzoneNoti.jpg");
-    width: 50rem;
+    width: 100%;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; }
   .noticias__imagenDos {
     background-image: url("../img/grandNoti.jpg");
-    width: 500px;
+    width: 100%;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover; }
   .noticias__imagenTres {
     background-image: url("../img/witcherNoti.jpg");
-    width: 50rem;
+    width: 100%;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -1172,36 +1173,6 @@ body {
     grid-area: seccion3-grid1; }
   .seccion3 .seccion3-grid2 {
     grid-area: seccion3-grid2; }
-
-.body-control {
-  background: #dbe0e9; }
-
-.sesion-control {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-
-.login {
-  width: 360px;
-  height: min-content;
-  padding: 20px;
-  border-radius: 12px;
-  background: #ffffff; }
-
-.login h1 {
-  font-size: 2.5rem;
-  margin-bottom: 25px; }
-
-.login form {
-  font-size: 20px; }
-
-.login form .form-group {
-  margin-bottom: 12px; }
-
-.login form input[type="submit"] {
-  font-size: 20px;
-  margin-top: 15px; }
 
 /* ------------------------------------------ */
 /* -------query de la pagina inicio--------- */
@@ -1638,6 +1609,10 @@ body {
 /* ------------------------------------------ */
 /* ------query de la pagina Servicios------- */
 /* ---------------------------------------- */
+@media screen and (max-width: 1309px) {
+  .service__pie--pading1 {
+    padding-top: 38px; } }
+
 @media screen and (max-width: 1303px) {
   .servione {
     grid-area: servione;
@@ -1692,7 +1667,9 @@ body {
 
 @media screen and (max-width: 1299px) {
   .services__encabezado {
-    margin-bottom: 2px; } }
+    margin-bottom: 2px; }
+  .service__pie--pading1 {
+    padding-top: 34px; } }
 
 @media screen and (max-width: 1262px) {
   .services__encabezado {
@@ -1706,6 +1683,10 @@ body {
   .services__encabezado {
     margin-bottom: 0px;
     padding-bottom: 3px; } }
+
+@media screen and (max-width: 1215px) {
+  .service__pie--pading1 {
+    padding-top: 35px; } }
 
 @media screen and (max-width: 1205px) {
   .services__encabezado {
@@ -1761,7 +1742,9 @@ body {
   .services__paragrafo {
     font-size: 1.1rem; }
   .services__encabezado {
-    margin-bottom: 44px; } }
+    margin-bottom: 44px; }
+  .service__pie--pading1 {
+    padding-top: 25px; } }
 
 @media screen and (max-width: 1000px) {
   .servinoti {
@@ -1814,9 +1797,13 @@ body {
   .services__encabezado {
     margin-bottom: 5px; } }
 
+@media screen and (max-width: 990px) {
+  .service__pie--pading1 {
+    padding-top: 19px; } }
+
 @media screen and (max-width: 836px) {
   .services__encabezado {
-    margin-bottom: 0px; }
+    margin-bottom: 4px; }
   .btn-buy {
     padding: 0.5rem 4rem; }
   .services__img {
@@ -1828,6 +1815,10 @@ body {
     padding-top: 5px; }
   .nuestros__mintitle {
     font-size: 1.3rem; } }
+
+@media screen and (max-width: 797px) {
+  .service__pie--pading1 {
+    padding-top: 0px; } }
 
 @media screen and (max-width: 772px) {
   .btn-buy {
@@ -1906,6 +1897,10 @@ body {
     font-size: 1.6rem; }
   .nuestros__paragrafo {
     font-size: 1.2rem; } }
+
+@media screen and (max-width: 425px) {
+  .services__pie {
+    padding-top: 16px; } }
 
 @media screen and (max-width: 411px) {
   .services__paragrafo {
