--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -253,7 +253,7 @@
 
   &__imagenUno {
     background-image: url("../img/warzoneNoti.jpg");
-    width: 50rem;
+    width: 100%;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -262,7 +262,7 @@
 
   &__imagenDos {
     background-image: url("../img/grandNoti.jpg");
-    width: 500px;
+    width: 100%;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -271,7 +271,7 @@
 
   &__imagenTres {
     background-image: url("../img/witcherNoti.jpg");
-    width: 50rem;
+    width: 100%;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
